          All derived tags (like {% brick_table_action %}) accept this argument too, of course.
        # Apps :
            * Creme_config:
                - In the class 'registry._ConfigRegistry', some methods to unregister brick classes have been added.
                - Many portals have been reworked to store the list of displayed Brick as a class attribute.
            * Activities:
                - The models 'ActivityType' & 'ActivitySubType' now inherit 'creme_core.models.MinionModel' (see <Breaking changes> part too).
                - The upgrade of FullCalendar came with the following changes :
                    - these views use ISO8601 format WITH timezone (e.g 2023-04-14T10:38:30+01:00) :
                         - activities__calendars_activities
                         - activities__set_activity_dates
                    - The timezone used is the one provided by the user information instead of the browser's one.
            * Reports:
                - The graphes with type 'creme.D3TubeChart' now support color field from data.
            * Sketch:
                - The new type of chart 'creme.D3LineChart' draws a curved line with (optional) dots and tooltips.
                - The new chart component 'creme.d3Tooltip' allows to render HTML tooltips.
                - New 'creme.d3BisectScale' that retrieve the value scale source value from the position in a chart.
                - The type of chart 'creme.D3DonutChart' now supports color field from data.
                - The new functions 'd3.axisRadialInner()' & 'd3.axisRadialOuter' draw axis for gauge meters.

    Breaking changes :
    ------------------
        # Deprecated stuffs which have been removed :
            - In 'creme_core.core' :
                - In the class 'entity_cell.EntityCell' (& child classes), the methods
                  'render_html()' & 'render_csv()' have been removed.